# PIVONet

./: .gitignore  LICENSE  QUICK_REFERENCE.md  README.md  config.yml  main.sh  prompt.txt  pyproject.toml  requirements.txt  run_app.sh  tmp_test.txt
PyFR-Test-Cases/axial-compressor/: axial-compressor.geo  axial-compressor.ini  axial-compressor.msh
cache/: empty.txt
data/: empty.txt
docs/: flow_usage.md
manuscript/: abstract.tex  background.tex  conclusion.tex  discussion.tex  examples.tex  experiment.tex  introduction.tex  main.fdb_latexmk  main.fls  main.tex  model.tex  preamble.tex  references.bib  results.tex
manuscript/appendix/: figures.tex  glossary.tex  gru_mlp.tex  hyperparams.tex  implementation.tex  pyfr.tex
old_code/: DATA_EXPORT_README.md  proposal.md  test.py  viewer_taichi.py
old_code/scripts/: generate_demo_data.py
old_code/thermal_flow_cnf/: app_streamlit.py  main.py
scripts/: analyze_bundle.py  analyze_drift_components.py  check_ckpt.py  check_trajectories.py  check_velocity_snapshots.py  generate_demo_data.py  inspect_bundle.py  length_sweep.py  repair_bundle.py  trajectory_diagnostics.py
src/: __init__.py  main.py
src/app/: __init__.py  ui.py
src/cfd/: __init__.py  evaluation.py  modeling.py  particle_trajectories.py  pipeline.py  pyfr_simulation.py  visualization.py
src/cli/: __init__.py  chat.py  commands.py  main.py
src/experiments/: __init__.py  compressor.yaml  demo-baseline.yaml  euler-vortex.yaml  inc-cylinder.yaml  integrator-comparison.yaml  (+3 more)
thermal_flow_cnf/: .gitignore  README.md  app_streamlit.py  main.py
(+156 files in other folders)
